# aisd_laba4

./: CMakeLists.txt  README.md
include/: BinaryTree.h
src/: BinaryTree.cc  BinaryTree_experiment.cc  BinaryTree_task.cc
tests/: BinaryTree_tests.cc
